# Meta-Hackathon

./: .gitignore  Dockerfile  README.md  env.py  grader.py  index.html  inference.py  main.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
